fix white space entre les divs

--- a/mystyle.css
+++ b/mystyle.css
@@ -6,11 +6,18 @@ body, html {
 #section1 {
 	height: 100%;
 	width: 100%;
+	background-color:black;
+	float:left;
+	clear:none;
+	
 }
 
 #section2 {
 	height: 100%;
 	width: 100%;
+	background-color:black;
+	float:left;
+	clear:none;
 }
 
 .background {
@@ -61,4 +68,11 @@ body, html {
 	bottom:4px;
 	left: 50%;
 	opacity: 0.6;
+}
+
+.text{
+	color: white;
+	opacity: 0.8;
+	font-family: Courier, monospace;
+	font-size: 2.2vw;
 }
